--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,9 +23,10 @@ body {
 }
 
 .propic {
-  border-radius: 50%;
-  height: 600px;
-  width: 600px;
+  border-radius: 25%;
+   height: 800px;
+  /*width: 600px; */
+  border-style: 2px solid white;
 }
 
 .headerbg {
