finished styling, navbar burger is last piece, WIP

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,6 +51,10 @@ body {
   font-family: 'Bitter', serif;
 }
 
+.abttext {
+  font-family: 'Barlow Condensed', sans-serif;
+}
+
 .foottext {
   font-family: 'Bitter', serif;
 }
