updated navbar edges

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -61,4 +61,8 @@ body {
 
 .navb {
   background-color: lightblue;
+  border-top-left-radius:30px;
+  border-bottom-left-radius:30px;  
+  border-top-right-radius:30px;
+  border-bottom-right-radius:30px; 
 }
